--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-  <h1 id="level-title">Press A Key to Start</h1>
+  <h1 id="level-title">Press The Button to Start!</h1>
+  <button id="start-btn">Start</button>
   <div class="container">
     <div lass="row">
       <div type="button" id="green" class="btn green"></div>
